--- a/BusBookingSystem/src/main/resources/templates/index.html
+++ b/BusBookingSystem/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
         body {
             height: 100vh;
             width: 100vw;
+            overflow-x: hidden;
         }
 
         * {
@@ -26,9 +27,9 @@
     </style>
 </head>
 <body style="background-color: #e1f2ea">
-<div style="height: 100%;">
+<div>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-        <div class="container-fluid">
+        <div class="container-fluid ms-3 me-3">
             <a class="navbar-brand">
                 <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
                      th:src="@{/assets/bus-icon.png}">
@@ -62,9 +63,7 @@
         </div>
     </nav>
 
-    <br>
-
-    <section>
+    <div class="container mb-4 mt-4">
         <div class="d-flex align-items-center flex-column gap-4">
             <div th:if="${param.success}">
                 <div class="alert alert-info">Your ticket successfully saved. You may now manage it in your personal
@@ -76,8 +75,9 @@
             <div th:if="${param.logout}">
                 <div class="alert alert-info">You have been logged out.</div>
             </div>
-            <h1>Welcome to my fancy Bus Booking System</h1>
-            <br>
+
+            <h1>Welcome to Bus Booking System</h1>
+
             <form class="d-flex" method="get" autocomplete="off" th:action="@{/bus/search}" th:object="${searchData}">
                 <input class="form-control me-1" id="departure" type="search" placeholder="Departure City"
                        aria-label="Departure City" th:field="*{departureCity}" required>
@@ -89,63 +89,58 @@
                 <button class="btn btn-success" type="submit">Search</button>
             </form>
         </div>
-    </section>
+    </div>
 
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
             </div>
 
-            <div class="col-12 text-center">
-                <br>
-                <div th:each="bus: ${noBuses}">
+            <div class="col-12 text-center mt-4">
+                <div th:each="bus: ${noBuses}"> <!-- TODO shorten column for this message-->
                     <div class="alert alert-info">No buses was found with given search parameters.</div>
                 </div>
                 <div th:each="bus :${buses}">
-                    <br>
-                    <br>
-                    <div class="card text-center border border-success">
+                    <div class="card text-center border border-success mb-4">
                         <div class="card-body">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col align-self-center">
-                                        <h6 class="card-title"><span
-                                                th:text="${#temporals.format(bus.getDepartureTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
-                                        </h6>
-                                        <h5 class="card-text">Departs from: <span
-                                                th:text="${bus.getDepartureCity()}"></span></h5>
-                                    </div>
-                                    <div class="col align-self-center">
-                                        <h6 class="card-title"><span
-                                                th:text="${#temporals.format(bus.getArrivalTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
-                                        </h6>
-                                        <h5 class="card-text">Arrives to: <span
-                                                th:text="${bus.getArrivalCity()}"></span></h5>
-                                    </div>
-                                    <div class="col-4 align-self-center border-start">
-                                        <div class="row">
-                                            <div class="col align-self-center">
-                                                <p><span th:text="${bus.getTicketPrice()}"></span> UAN</p>
-                                                <p><span
-                                                        th:text="${#temporals.format(bus.getTravelTime(), 'HH:mm')}"></span>
-                                                    on the road
-                                                </p>
+                            <div class="row">
+                                <div class="col align-self-center">
+                                    <h6 class="card-title"><span
+                                            th:text="${#temporals.format(bus.getDepartureTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
+                                    </h6>
+                                    <h5 class="card-text">Departs from: <span
+                                            th:text="${bus.getDepartureCity()}"></span></h5>
+                                </div>
+                                <div class="col align-self-center">
+                                    <h6 class="card-title"><span
+                                            th:text="${#temporals.format(bus.getArrivalTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
+                                    </h6>
+                                    <h5 class="card-text">Arrives to: <span
+                                            th:text="${bus.getArrivalCity()}"></span></h5>
+                                </div>
+                                <div class="col-4 align-self-center border-start">
+                                    <div class="row">
+                                        <div class="col align-self-center">
+                                            <p><span th:text="${bus.getTicketPrice()}"></span> UAN</p>
+                                            <p><span
+                                                    th:text="${#temporals.format(bus.getTravelTime(), 'HH:mm')}"></span>
+                                                on the road
+                                            </p>
+                                        </div>
+                                        <div class="col align-self-center">
+                                            <p>
+                                            <div th:if="${bus.getAvailableSeats().size() == 0}">
+                                                <button type="button" class="btn btn-secondary" disabled>Choose
+                                                </button>
                                             </div>
-                                            <div class="col align-self-center">
-                                                <p>
-                                                <div th:if="${bus.getAvailableSeats().size() == 0}">
-                                                    <button type="button" class="btn btn-secondary" disabled>Choose
-                                                    </button>
-                                                </div>
-                                                <div th:unless="${bus.getAvailableSeats().size() == 0}">
-                                                    <a type="button" class="btn btn-success"
-                                                       th:href="@{/preorder/{name}(name=${bus.getName()})}">Choose</a>
-                                                </div>
-                                                </p>
-                                                <p><span th:text="${bus.getAvailableSeats().size()}"></span> seats
-                                                    left
-                                                </p>
+                                            <div th:unless="${bus.getAvailableSeats().size() == 0}">
+                                                <a type="button" class="btn btn-success"
+                                                   th:href="@{/preorder/{name}(name=${bus.getName()})}">Choose</a>
                                             </div>
+                                            </p>
+                                            <p><span th:text="${bus.getAvailableSeats().size()}"></span> seats
+                                                left
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
