--- a/BusBookingSystem/src/main/resources/templates/checkout.html
+++ b/BusBookingSystem/src/main/resources/templates/checkout.html
@@ -52,7 +52,7 @@
 
         <div class="col-8 align-self-center">
             <div th:each="bus :${currentBus}">
-                <div class="card border border-success mt-4">
+                <div class="card border border-success mt-4 mb-4">
                     <div class="card-header">
                         <span class="text-muted">Bus</span> -> Passenger -> <span class="text-muted">Payment</span>
                     </div>
