--- a/BusBookingSystem/src/main/resources/templates/login.html
+++ b/BusBookingSystem/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
                         </form>
                     </div>
                     <div th:if="${param.error}">
-                        <div class="alert alert-info text-center">Invalid email or password.</div>
+                        <div class="alert alert-danger text-center">Invalid email or password.</div>
                     </div>
                     <div class="card-footer py-3 border-0">
                         <div class="text-center">
